Updating backend to work locally with easier search + using Discog API

--- a/.env.template
+++ b/.env.template
@@ -14,4 +14,7 @@ REDIS_LOCATION=redis://localhost:6379/0
 SPOTIFY_CLIENT_ID=your-spotify-client-id
 SPOTIFY_CLIENT_SECRET=your-spotify-client-secret
 
+DISCOGS_CONSUMER_KEY=WjTRsrKnXEarTtHYmQMO
+DISCOGS_CONSUMER_SECRET=your-discogs-consumer-secret
+
 LOG_LEVEL=INFO 
