--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ django-cors-headers==4.3.1
 djangorestframework-simplejwt==5.3.1
 coreapi==2.3.3
 PyJWT==2.8.0
-pyjwt[crypto]==2.8.0 
+pyjwt[crypto]==2.8.0
+django-filter==25.1 
