--- a/.env.template
+++ b/.env.template
@@ -1,20 +1,23 @@
-DJANGO_SECRET_KEY=your-secret-key
+DJANGO_SECRET_KEY=your-secret-key-here
 DEBUG=False
-ALLOWED_HOSTS=localhost,127.0.0.1
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+ALLOWED_HOSTS=localhost,127.0.0.1,.vercel.app
+CORS_ALLOWED_ORIGINS=http://localhost:3000,https://yourapp.vercel.app
 
-DB_NAME=boomboxd
-DB_USER=your-db-user
-DB_PASSWORD=your-db-password
-DB_HOST=localhost
+# Database configuration
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=your-password-here
+DB_HOST=your-host-here
 DB_PORT=5432
 
-REDIS_LOCATION=redis://localhost:6379/0
+# Optional: Redis configuration
+REDIS_LOCATION=
 
-SPOTIFY_CLIENT_ID=your-spotify-client-id
-SPOTIFY_CLIENT_SECRET=your-spotify-client-secret
+# API credentials
+DISCOGS_CONSUMER_KEY=your-discogs-key-here
+DISCOGS_CONSUMER_SECRET=your-discogs-secret-here
+SPOTIFY_CLIENT_ID=your-spotify-id-here
+SPOTIFY_CLIENT_SECRET=your-spotify-secret-here
 
-DISCOGS_CONSUMER_KEY=WjTRsrKnXEarTtHYmQMO
-DISCOGS_CONSUMER_SECRET=your-discogs-consumer-secret
-
+# Logging
 LOG_LEVEL=INFO 
