--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,8 @@ djangorestframework-simplejwt==5.3.1
 coreapi==2.3.3
 PyJWT==2.8.0
 pyjwt[crypto]==2.8.0
-django-filter==25.1 
+django-filter==25.1
+coreschema==0.0.4
+pyyaml==6.0.1
+uritemplate==4.1.1
+itypes==1.2.0 
