--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ python-dotenv==1.0.0
 django-cors-headers==4.3.1
 djangorestframework-simplejwt==5.3.1
 PyJWT==2.8.0
-django-filter==25.1 
+django-filter==25.1
+spotipy==2.23.0
