--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ djangorestframework-simplejwt==5.3.1
 PyJWT==2.8.0
 django-filter==25.1
 python3-discogs-client==2.8
+django-ratelimit==4.1.0
+django-validators==0.5.0
