--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-Django==5.2
-djangorestframework==3.14.0
-requests==2.32.3
-psycopg2-binary==2.9.10
-python-dotenv==1.0.0
-django-cors-headers==4.3.1
-djangorestframework-simplejwt==5.3.1
-PyJWT==2.8.0
-django-filter==25.1
-python3-discogs-client==2.8
-django-ratelimit==4.1.0
-django-validators==0.5.0
+Django
+djangorestframework
+requests
+psycopg2-binary
+python-dotenv
+django-cors-headers
+djangorestframework-simplejwt
