--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
+  "buildCommand": "python manage.py collectstatic --noinput",
   "builds": [
     {
       "src": "api/index.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "static/**",
+      "use": "@vercel/static"
     },
     {
       "src": "staticfiles/**",
@@ -12,6 +17,10 @@
   "routes": [
     {
       "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/staticfiles/(.*)",
       "dest": "/staticfiles/$1"
     },
     {
