--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,6 @@
       "use": "@vercel/python"
     },
     {
-      "src": "static/**",
-      "use": "@vercel/static"
-    },
-    {
       "src": "staticfiles/**",
       "use": "@vercel/static"
     }
@@ -17,7 +13,7 @@
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "/staticfiles/$1"
     },
     {
       "src": "/staticfiles/(.*)",
