--- a/vercel.json
+++ b/vercel.json
@@ -5,48 +5,18 @@
       "src": "api/index.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
-      }
-    },
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/node",
-      "config": {
-        "buildCommand": "cd frontend && npm ci && npm run build"
+        "maxLambdaSize": "15mb"
       }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/admin/(.*)",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/static/(.*)",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/media/(.*)",
-      "dest": "api/index.py"
-    },
-    {
       "src": "/(.*)",
-      "dest": "api/index.py"
+      "dest": "/api/index.py"
     }
   ],
   "env": {
     "DJANGO_SETTINGS_MODULE": "boomboxd.settings",
-    "PYTHONPATH": "$PYTHONPATH:.",
     "DEBUG": "False"
-  },
-  "functions": {
-    "api/index.py": {
-      "includeFiles": "**"
-    }
   }
 } 
