--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && npm ci && npm run build",
+  "buildCommand": "./build.sh",
   "builds": [
     {
       "src": "api/index.py",
@@ -19,5 +19,10 @@
   "env": {
     "DJANGO_SETTINGS_MODULE": "boomboxd.settings",
     "DEBUG": "False"
+  },
+  "functions": {
+    "api/index.py": {
+      "includeFiles": "frontend/build/**"
+    }
   }
 } 
