--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Music review app with Django backend and React frontend",
   "scripts": {
-    "build": "cd frontend && npm install && CI= npm run build && cd .. && rm -rf staticfiles && mkdir staticfiles && cp frontend/build/index.html staticfiles/ && cp -r frontend/build/static/* staticfiles/ && mkdir -p staticfiles/accounts && cp accounts/static/accounts/default-avatar.svg staticfiles/accounts/ && mkdir -p staticfiles/music && cp music/static/music/default-album.svg staticfiles/music/",
+    "build": "cd frontend && npm install && CI= npm run build && cd .. && rm -rf staticfiles && mkdir staticfiles && cp frontend/build/index.html staticfiles/ && cp -r frontend/build/static/* staticfiles/ && cp frontend/build/favicon.ico staticfiles/ && cp frontend/build/logo192.png staticfiles/ && cp frontend/build/manifest.json staticfiles/ && cp frontend/build/robots.txt staticfiles/ && mkdir -p staticfiles/accounts && cp accounts/static/accounts/default-avatar.svg staticfiles/accounts/ && mkdir -p staticfiles/music && cp music/static/music/default-album.svg staticfiles/music/",
     "vercel-build": "npm run build"
   },
   "engines": {
